--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   ghcr:
     name: ${{ github.ref == 'refs/heads/main' && 'Build and Push' || 'Test Build' }}
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -26,6 +26,8 @@ jobs:
       - name: ${{ github.ref == 'refs/heads/main' && 'Build and Push' || 'Test Build' }}
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5
         with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: ghcr.io/spillhuset/shinfo-beta
 
@@ -33,6 +35,8 @@ jobs:
       - name: ${{ github.ref == 'refs/heads/main' && 'Build and Push' || 'Test Build' }} Nginx
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5
         with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: ghcr.io/spillhuset/shinfo-beta-nginx
           target: runtime-nginx
